# xxs

./: .gitmodules  .lldbinit  CMakeLists.txt  LICENSE  cmakelists.txt  config.json  readme.md
.github/workflows/: cmake-multi-platform.yml
assets/: forest.lua
assets/playerSprites_/: readMe_.txt
code/include/: device.hpp  fileio.hpp  game.hpp  handle.hpp  input.hpp  log.hpp  render.hpp  script.hpp  tools.hpp
code/source/: device.cpp  fileio.cpp  game.cpp  input.cpp  main.cpp  render.cpp  script_lua.cpp
docs/: intro.md  monday.md  tuesday.md
